推送掩码工具类

--- a/daily-practice/src/main/resources/application.properties
+++ b/daily-practice/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # 是否开启xml配置
 spring.xml.enable=true
+# 掩码配置
+sensitive.mask.sql.session.datasource = dataSource
+sensitive.mask.enable = true
