--- a/daily-practice/src/main/resources/application.properties
+++ b/daily-practice/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.xml.enable=true
 # 掩码配置
 sensitive.mask.sql.session.datasource = dataSource
-sensitive.mask.enable = true
+sensitive.mask.enable = false
